--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@reactioncommerce/api-plugin-carts",
   "description": "Carts plugin for the Reaction API",
-  "version": "1.0.0",
+  "version": "1.0.0-development",
   "main": "index.js",
   "type": "module",
   "engines": {
